# syndicate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  docs-deploy.yaml  tests.yaml
docs/: index.md  meet_the_team.md  setup_guide.md
docs/dev_docs/: agents.md  chat.md  data_models.md  file_manager.md  llm_clients.md  logging.md  secrets.md  tools.md  trade.md  tui.md
docs/stylesheets/: extra.css
images/: Screen Recording 2026-04-03 at 5.48.05 PM.mov  Screen Recording 2026-04-03 at 5.54.38 PM.mov
src/syndicate/: __init__.py  __main__.py  agent.py  callbacks.py  chat_graph.py  cli.py  file_manager.py  log_config.py  secrets.py  tools.py  trading_graph.py
src/syndicate/agents/: __init__.py  fundemental_analyst.py  news_analyst.py  relationship_manager.py  technical_analyst.py  trader.py
src/syndicate/app/: __init__.py  callbacks.py  syndicate.py  syndicate.tcss
src/syndicate/app/components/: api_input.py  cron_input.py  guardrails_input.py  model_provider.py  setup.py  splash.py
src/syndicate/llm_clients/: __init__.py  anthropic_client.py  base_client.py  factory.py  gemini_client.py  openai_client.py  qwen_client.py  validate.py
src/syndicate/models/: __init__.py  agent_model.py  chat_state.py  decision_model.py  guardrails_model.py  llm.py  portfolio_model.py  trade_state.py  user_model.py  watchlist.py
src/syndicate/tools/: __init__.py  fundemetal_analysis.py  market.py  news.py  relationship_tools.py  technical_analysis.py  trading.py
tests/: fundemental_analysis.py  test_cron.py  test_file_manager.py  test_llm_clients.py  test_news_tools.py  test_relationship_tools.py  test_secrets.py  test_technical_tools.py  test_trading_graph.py  test_trading_tools.py
