[project]
name = "syndicate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael May", email = "mskmay66@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.2",
    "art>=6.5",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langchain-qwq>=0.3.4",
    "langgraph>=1.0.8",
    "pandas>=3.0.0",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
    "pytz>=2025.2",
    "textual>=8.0.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "yfinance>=1.2.0",
]

[project.scripts]
syndicate = "syndicate.app.syndicate:main"
syndicate-run = "syndicate.__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
